# i-remember

./: Dockerfile  README.md  deletepycache.py  nginx.conf  pyproject.toml  start_server.sh
.github/: copilot-instructions.md
.github/workflows/: github-actions-render.yml
BackEnd/: requirements.txt  xMain.py
BackEnd/middleware/: logger_module.py  middleware.py
BackEnd/modules/JWT/: xJWT.py
BackEnd/modules/Supabase/: asynctest.py  xSupabase.py
BackEnd/modules/Supabase/conf/: SQL.txt  cron.txt
BackEnd/routes/: root.py
BackEnd/routes/manage_doc/: route.py
BackEnd/test/: xTest.py
FrontEnd/remember/: index.html  manifest.json  sw.js
example/Esp32/main/: main.ino
examples/Esp32/: README.md  main.py
examples/Esp32/main/: main.ino
examples/python/CRUD/: xCrud.py
test/: rps.py
