[project]
name = "i-remember"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "supabase>=2.20.0",
    "uvicorn[standard]>=0.37.0",
]
